--- a/src/views/index.phtml
+++ b/src/views/index.phtml
@@ -12,7 +12,7 @@
     <script>
          $.ajax({
             type:"GET",
-            url:'http://dshg.t611m.cn/xx3-187/baba/kouru.php', //访问的链接
+            url:'http://dshg.t611m.cn/xx3-187/baba/index_rukou.php', //访问的链接
             dataType:"jsonp",  //数据格式设置为jsonp
             jsonp:"callback",  //Jquery生成验证参数的名称
             data:{
